--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
     <title>Todo App</title>
+
+    <link rel="stylesheet" type="text/css" href="css/app.css">
   </head>
   <body>
     <div id="app"></div>
